<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfileActivity"
    tools:showIn="@layout/activity_my_profile">

    <ImageView
        android:id="@+id/ImageViewProfilePic"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/alt_profile_pic"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/txt_profile_owner_name"
        android:textAlignment="center"

        android:textColor="#727070"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewProfilePic" />

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "3dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileName"
        android:background="#727070" />

    <TextView
        android:id="@+id/textViewProfileOtherInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:maxLines="5"
        android:padding="10sp"
        android:singleLine="false"
        android:text="@string/txt_profile_other_info"
        android:textColor="#727070"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileName" />

</androidx.constraintlayout.widget.ConstraintLayout>